{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 314,
  "lineage": "cbd9f440-3734-6abf-8cb5-223522343e2a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0324283b5b4e0831d",
            "arn": "arn:aws:ec2:us-east-1:191136519599:elastic-ip/eipalloc-0324283b5b4e0831d",
            "association_id": "eipassoc-0e49a0ce91001627d",
            "domain": "vpc",
            "id": "eipalloc-0324283b5b4e0831d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a40417dfce4f52ec",
            "private_dns": "ip-10-1-0-233.ec2.internal",
            "private_ip": "10.1.0.233",
            "public_dns": "ec2-98-80-111-38.compute-1.amazonaws.com",
            "public_ip": "98.80.111.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:internet-gateway/igw-085072a04e750faeb",
            "id": "igw-085072a04e750faeb",
            "owner_id": "191136519599",
            "tags": {
              "Name": "toptal-igw",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "toptal-igw",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "toptal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:loadbalancer/app/toptal-alb/7a453f3520d0f8d7",
            "arn_suffix": "app/toptal-alb/7a453f3520d0f8d7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "toptal-alb-1589610033.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:loadbalancer/app/toptal-alb/7a453f3520d0f8d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "toptal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-085fd4aaf8d3eb7bc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033e0a63435e90622"
              },
              {
                "subnet_id": "subnet-0a8dd8b6339af8461"
              }
            ],
            "subnets": [
              "subnet-033e0a63435e90622",
              "subnet-0a8dd8b6339af8461"
            ],
            "tags": {
              "Name": "toptal-alb",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "toptal-alb",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "toptal_alb_http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:loadbalancer/app/toptal-alb/7a453f3520d0f8d7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_lb.toptal_alb",
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_host_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/api/bcdbc668f7b0c5f3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener-rule/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae/694cd5f26e3a2958",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.*",
                      "api.kwkc.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener-rule/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae/694cd5f26e3a2958",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_lb.toptal_alb",
            "module.vpc.aws_lb_listener.toptal_alb_http_80",
            "module.vpc.aws_lb_target_group.api",
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_host_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/web/92c79f9c88cd69c1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener-rule/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae/ec6a6122119ede52",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "web.*",
                      "web.kwkc.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener-rule/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae/ec6a6122119ede52",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:listener/app/toptal-alb/7a453f3520d0f8d7/ef7cc3e42ded7bae",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_lb.toptal_alb",
            "module.vpc.aws_lb_listener.toptal_alb_http_80",
            "module.vpc.aws_lb_target_group.web",
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/api/bcdbc668f7b0c5f3",
            "arn_suffix": "targetgroup/api/bcdbc668f7b0c5f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/api/bcdbc668f7b0c5f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:191136519599:loadbalancer/app/toptal-alb/7a453f3520d0f8d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/web/92c79f9c88cd69c1",
            "arn_suffix": "targetgroup/web/92c79f9c88cd69c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191136519599:targetgroup/web/92c79f9c88cd69c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:191136519599:loadbalancer/app/toptal-alb/7a453f3520d0f8d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_rt_main_as_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad1dacffd343963",
            "original_route_table_id": "rtb-0605fc8e85a2a13ed",
            "route_table_id": "rtb-0045983c02fed38b3",
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt_01",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0324283b5b4e0831d",
            "association_id": "eipassoc-0e49a0ce91001627d",
            "connectivity_type": "public",
            "id": "nat-032600ab175b0a8a9",
            "network_interface_id": "eni-0a40417dfce4f52ec",
            "private_ip": "10.1.0.233",
            "public_ip": "98.80.111.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8dd8b6339af8461",
            "tags": {
              "Name": "toptal-natgw",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "toptal-natgw",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw_01",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058cfc71ec9a377bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-032600ab175b0a8a9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058cfc71ec9a377bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw_01",
            "module.vpc.aws_nat_gateway.nat_gw_01",
            "module.vpc.aws_route_table.private_rt_01",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-085072a04e750faeb",
            "id": "r-rtb-0045983c02fed38b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0045983c02fed38b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_01",
            "module.vpc.aws_route_table.public_rt_01",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:route-table/rtb-058cfc71ec9a377bd",
            "id": "rtb-058cfc71ec9a377bd",
            "owner_id": "191136519599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-032600ab175b0a8a9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "toptal-private-route-table",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "toptal-private-route-table",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:route-table/rtb-0045983c02fed38b3",
            "id": "rtb-0045983c02fed38b3",
            "owner_id": "191136519599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085072a04e750faeb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "toptal-public-route-table",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "toptal-public-route-table",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_rt_as_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6c41260e1a795eb",
            "route_table_id": "rtb-058cfc71ec9a377bd",
            "subnet_id": "subnet-0ee4e740ee8a0a121"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_01",
            "module.vpc.aws_subnet.private_data_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_as_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76f6e199252daf3",
            "route_table_id": "rtb-0045983c02fed38b3",
            "subnet_id": "subnet-0a8dd8b6339af8461"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt_01",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff7877c3244e8d34",
            "route_table_id": "rtb-0045983c02fed38b3",
            "subnet_id": "subnet-033e0a63435e90622"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt_01",
            "module.vpc.aws_subnet.public_subs_01",
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:security-group/sg-06a60c8e06a2fce3f",
            "description": "sg for api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a60c8e06a2fce3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "47.194.69.245/32"
                ],
                "description": "internal subnet ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALB to api container",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085fd4aaf8d3eb7bc"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Web to API over Cloud Map",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09134e701d869b215"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "API Sec Group",
            "name_prefix": "",
            "owner_id": "191136519599",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_security_group.web_server_sg",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:security-group/sg-006b4e1781c7900a1",
            "description": "Standard SecGroup for MH RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound access for updates",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006b4e1781c7900a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Postgresql access from App subnets",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS-Postgresql-common-security-group",
            "name_prefix": "",
            "owner_id": "191136519599",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "toptal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:security-group/sg-085fd4aaf8d3eb7bc",
            "description": "Security group for public ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085fd4aaf8d3eb7bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "toptal-alb-sg",
            "name_prefix": "",
            "owner_id": "191136519599",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:security-group/sg-09134e701d869b215",
            "description": "sg for web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09134e701d869b215",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "47.194.69.245/32"
                ],
                "description": "internal subnet ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALB to web container",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085fd4aaf8d3eb7bc"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Web Sec Group",
            "name_prefix": "",
            "owner_id": "191136519599",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.toptal_alb_sg",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subs_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:subnet/subnet-0ee4e740ee8a0a121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee4e740ee8a0a121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191136519599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toptal-data-us-east-1a",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "data"
            },
            "tags_all": {
              "Name": "toptal-data-us-east-1a",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "data"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:subnet/subnet-0320091d9a3819430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0320091d9a3819430",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191136519599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toptal-data-us-east-1b",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "data"
            },
            "tags_all": {
              "Name": "toptal-data-us-east-1b",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "data"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subs_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:subnet/subnet-0a8dd8b6339af8461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8dd8b6339af8461",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191136519599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toptal-public-us-east-1a",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "public"
            },
            "tags_all": {
              "Name": "toptal-public-us-east-1a",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "public"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:subnet/subnet-033e0a63435e90622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033e0a63435e90622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191136519599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toptal-public-us-east-1b",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "public"
            },
            "tags_all": {
              "Name": "toptal-public-us-east-1b",
              "management": "terraform",
              "owner": "techops",
              "service": "infra",
              "usage": "public"
            },
            "vpc_id": "vpc-0d05e44c8b0a8ff31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191136519599:vpc/vpc-0d05e44c8b0a8ff31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0005ade191ffc3fa2",
            "default_route_table_id": "rtb-0045983c02fed38b3",
            "default_security_group_id": "sg-068b909409fbd020c",
            "dhcp_options_id": "dopt-0f8b2bfb760ba53ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d05e44c8b0a8ff31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0045983c02fed38b3",
            "owner_id": "191136519599",
            "tags": {
              "Name": "project",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            },
            "tags_all": {
              "Name": "project",
              "account": "toptal",
              "management": "terraform",
              "owner": "techops",
              "service": "infra"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}